--- a/2023-3-6/2023-3-6/2023-3-6.csproj
+++ b/2023-3-6/2023-3-6/2023-3-6.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="computer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="computer.Designer.cs">
+      <DependentUpon>computer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,6 +63,12 @@
     </Compile>
     <Compile Include="Form_button.Designer.cs">
       <DependentUpon>Form_button.cs</DependentUpon>
+    </Compile>
+    <Compile Include="panel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="panel.Designer.cs">
+      <DependentUpon>panel.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextBox.cs">
@@ -70,6 +82,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form_button.resx">
       <DependentUpon>Form_button.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="panel.resx">
+      <DependentUpon>panel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
