--- a/2023-3-6/2023-3-6/2023-3-6.csproj
+++ b/2023-3-6/2023-3-6/2023-3-6.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>_2023_3_6.MainClass</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -58,18 +61,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form1_panel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1_panel.Designer.cs">
+      <DependentUpon>Form1_panel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_button.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form_button.Designer.cs">
       <DependentUpon>Form_button.cs</DependentUpon>
     </Compile>
-    <Compile Include="panel.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="panel.Designer.cs">
-      <DependentUpon>panel.cs</DependentUpon>
-    </Compile>
+    <Compile Include="MainClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextBox.cs">
       <SubType>Form</SubType>
@@ -80,11 +84,11 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form1_panel.resx">
+      <DependentUpon>Form1_panel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form_button.resx">
       <DependentUpon>Form_button.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="panel.resx">
-      <DependentUpon>panel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
